[UI-53] Modify Collapse behaviour to handle dynamic content change correctly

--- a/packages/collapse/styles/geometry.sass
+++ b/packages/collapse/styles/geometry.sass
@@ -2,7 +2,4 @@
 
 @include module('collapse')
   display: block
-
-  &--collapsed
-    max-height: 0 !important
-    overflow: hidden
+  overflow: hidden
